add nubber formater

--- a/docker/php/Dockerfile
+++ b/docker/php/Dockerfile
@@ -1,10 +1,11 @@
 FROM php:7.4-fpm
 
 RUN apt-get update && \
-    apt-get install -y libzip-dev --no-install-recommends
+    apt-get install -y libzip-dev libicu-dev --no-install-recommends
 
 RUN docker-php-ext-install \
     pdo_mysql \
-    zip
+    zip \
+    intl
 
 WORKDIR /srv/book
